[package]
name = "algo-j"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*" }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
colored = "2.1.0"

[build-dependencies]
lalrpop = "0.20.0"
